# status-helper

./: .dockerignore  .env.example  .gitignore  AI_Engineering_Status_Assistant_Prompt.md  Dockerfile  README.md  engineers.toml.example  pyproject.toml  repos.toml  repos.toml.example  run.sh  scrum.toml.example
deploy/k8s/: README.md  configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.example.yaml  service.yaml
src/status_assistant/: __init__.py  config.py  db.py  dependencies.py  engineers_config.py  main.py  models.py  queries.py  repos_config.py  scrum_config.py
src/status_assistant/ai/: __init__.py  base.py  openai_client.py  summarize.py
src/status_assistant/api/: __init__.py  routes.py  schemas.py
src/status_assistant/connectors/: __init__.py  base.py  github.py
src/status_assistant/ingestion/: __init__.py  sync.py
src/status_assistant/web/: __init__.py  views.py
src/status_assistant/web/static/: style.css
src/status_assistant/web/templates/: base.html  dashboard.html  engineer.html  engineers.html  repository.html  reviews.html  whats-happened.html
tests/: conftest.py  test_api.py  test_connector.py  test_engineers_config.py  test_ingestion.py  test_queries.py  test_repos_config.py  test_scrum_config.py  test_summarize.py
